# haskell-fract

./: LICENSE  README.md  fract.cabal
app/: Main.hs
src/: Complex.hs  Fractal.hs  Subdivide.hs
src/Fract/: Complex.hs  Draw.hs  Fractal.hs  State.hs  Subdivide.hs  Types.hs
test/: Spec.hs
