name:                fract
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fract#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Complex
                     , Fractal
                     , Subdivide
  build-depends:       base >= 4.7 && < 5
                     , colour
                     , GLUT
                     , parallel
  default-language:    Haskell2010

executable fract-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fract
  default-language:    Haskell2010

test-suite fract-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fract
                     , tasty
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fract
